--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.all{margin: 7% auto 5%;
+.all{margin: 7% auto 4%;
     width: 80%;
 
 }
@@ -6,7 +6,7 @@
     display: inline-block;
     margin-left:6% ;
     margin-top: 0;
-    width: 550px;
+    width:47%;
     vertical-align: top;
 }
 .h{
@@ -17,11 +17,12 @@
 }
 .p{
     text-align: left ;
-    font-size: 1.6rem;
     color: rgb(121, 122, 124);
-    font-size: 1rem;
-    font-family: "Alegreya", serif;
+    font-size: 17px;
+    font-family: "Alegreya", sans-serif;
     width: 100%;
+    line-height: 4.6vh;
+    
     
 }
 li{
@@ -37,16 +38,17 @@ li{
 
 
 .h1{
-    text-align: center;
+    text-align: left;
     font-family: "Alegreya", serif;
     font-weight: 100;
     font-size: 1.9rem;
-    margin-top: 20%;
+    margin-top: 4.6%;
 }
 .p1{
     text-align: center;
     font-size: medium;
-    color: rgb(159, 160, 161);
+    color: rgb(75, 75, 75);
+    line-height: 4vh;
 
 }
 .all{
@@ -75,16 +77,18 @@ li{
     width: 100%;
 } 
 .total{
-   margin-top: 25%;
+   margin-top: 5.8%;
     background-color: #f8f8f8;
     width: 100%;
-
+    height: 600px;
+    margin-bottom: 4%;
 }
 .ditotal{
 display: inline-block;
 width: 40%;
 vertical-align: top;
 margin-left: 10%;
+
 }
 .ditotal2{
     display: inline-block;
@@ -96,11 +100,11 @@ margin-left: 10%;
     }
 .p4{
    vertical-align: left ;
-    font-size: 1.6rem;
+    font-size: 17px;
     color: rgb(121, 122, 124);
-    font-size: 1rem;
     font-family: "Alegreya", serif;
     width: 100%;
+    line-height: 4.6vh;
 }
 .logo{
     /* background-color: aqua; */
@@ -111,11 +115,11 @@ margin-left: 10%;
     vertical-align:top ;
 }
 .background{
-    height: 100vh;
+    height: 810px;
     background-position:center center;
     background-size: cover;
     background-image: url(images/drew-coffman-1872.jpg);
-    margin-bottom: 9% ;
+    margin-bottom: 7% ;
 }
 
 .lil{
@@ -177,7 +181,7 @@ margin-left: 10%;
     font-family: "Alegreya", serif;
     font-size: medium;
     color: white;
-    margin-bottom: 25px;
+    margin-bottom: 60px;
     
     
 }
@@ -194,16 +198,17 @@ margin-left: 10%;
 }
 .dot{border-radius: 24px;
     padding: 13px; 
-    height: 19;
+    height: 20;
     border-width: 0.1px;
     display: block;
     border:2px solid rgba(255, 255, 255, 0.7);
-    margin: 0 auto;
+    margin: 60px auto ;
+    margin-left: 48.2%;
     width:0.2 ;
 }
 .elom{
     background-color: #f8f8f8;
-    margin-top: 20%;
+    margin-top: 6%;
 }
 .all2{
     width:90%;
