--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     width: 80%;
 
 }
-
 .who {
     display: inline-block;
     margin-left: 6%;
@@ -67,7 +66,23 @@ li {
     margin: 4% auto;
     width: 80%;
 }
-
+.buy {
+    padding: 9px 2px;
+    margin-top: 10px;
+    background-color: #8e7754;
+    border-style: solid;
+    border-color: #8e7754;
+    border-radius: 4px;
+    width: 90px;
+    height: 40px;
+    font-weight: 700;
+    font-family: "Alegreya Sans", sans-serif;
+    font-size: medium;
+    color: white;
+    margin-left: 125%;
+    cursor: pointer;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
 .d2 {
     width: 370;
     display: inline-block;
@@ -275,6 +290,7 @@ a {
     color: white;
     margin-bottom: 60px;
     margin-left: 5.8%;
+    cursor: pointer;
 
 
 }
@@ -393,6 +409,7 @@ a {
     padding-top: 0.2%;
     height: 15%;
     vertical-align: top;
+    
 }
 
 .c4 {
@@ -401,6 +418,7 @@ a {
     background-position: center center;
     background-repeat: no-repeat;
     height: fit-content;
+    
 }
 
 .hs {
