--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .all {
     margin: 7% auto 4%;
-    width: 80%;
+    width: 83%;
 
 }
 .who {
     display: inline-block;
     margin-left: 6%;
-    margin-top: 0;
+    margin-top: 0%;
     width: 47%;
     vertical-align: top;
 }
@@ -39,7 +44,7 @@ li {
 
 .d1 {
     display: inline-block;
-    width: 560px;
+    width: 550px;
 
 }
 
@@ -62,10 +67,6 @@ li {
 
 }
 
-.all {
-    margin: 4% auto;
-    width: 80%;
-}
 .buy {
     padding: 9px 2px;
     margin-top: 10px;
@@ -83,20 +84,16 @@ li {
     cursor: pointer;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
-.d2 {
-    width: 370;
+.d2,.d3,.d4 {
+    width: 365;
     display: inline-block;
 }
 
 .d3 {
-    width: 370;
-    display: inline-block;
     margin-left: 3%;
 }
 
 .d4 {
-    width: 370;
-    display: inline-block;
     margin-left: 3%;
 }
 
@@ -208,7 +205,7 @@ a {
     text-decoration: none;
     display: inline-block;
     padding-left: 25px;
-    font-size: 18px;
+    font-size: 17px;
     color: white;
     font-family: "Alegreya", serif;
     width: fit-content;
@@ -220,7 +217,7 @@ a {
 }
 
 .li1 {
-    margin-left: 15%;
+    margin-left: 17.5%;
 }
 
 .content {
@@ -265,8 +262,9 @@ a {
 
 .button {
 
-    width: 20%;
+    width: 25%;
     margin: auto;
+    
     /* background-color: aqua; */
 }
 
@@ -289,8 +287,9 @@ a {
     font-size: medium;
     color: white;
     margin-bottom: 60px;
-    margin-left: 5.8%;
+    margin-left: 5.5%;
     cursor: pointer;
+    display: inline-block;
 
 
 }
@@ -316,7 +315,7 @@ a {
     display: block;
     border: 2px solid rgba(255, 255, 255, 0.7);
     margin: 60px auto;
-    margin-left: 49%;
+    margin-left: 47.4%;
     width: 9px;
 
 
@@ -375,9 +374,9 @@ a {
 .contactinfo {
     width: 80%;
     margin: auto;
-    padding-top: 43px;
+    padding-top: 70px;
     padding-bottom: 2%;
-    margin-left: 10.4%;
+    margin-left: 10%;
 
     /* background-color: aquamarine; */
 }
@@ -385,7 +384,7 @@ a {
 .c {
     width: 23%;
     display: inline-block;
-    margin-left: 2.5%;
+    margin-left: 2%;
     height: 15%;
     vertical-align: top;
     letter-spacing: 0.1px;
@@ -394,20 +393,12 @@ a {
 
 
 .c1 {
-    width: 23%;
-    display: inline-block;
     padding-top: 0.2%;
-    height: 15%;
-    vertical-align: top;
     margin-left: 0;
 }
 
 .c44 {
-    width: 23%;
-    display: inline-block;
-    margin-left: 2%;
     padding-top: 0.2%;
-    height: 15%;
     vertical-align: top;
     
 }
