--- a/style3.css
+++ b/style3.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
+    padding: 0;
 }
-
 .background {
     background-image: url(images/drew-coffman-1872.jpg);
     height: 100vh;
@@ -19,7 +19,7 @@ body {
     background-color: rgba(0, 0, 0, 0.2);
     width: 100%;
     height: 1200px;
-    margin-top: -59.75%;
+    margin-top: -62.9%;
 }
 
 .bar {
@@ -27,7 +27,7 @@ body {
     top: 0;
     width: 100%;
     background-color: #ffffff;
-    padding-bottom: 1.1%;
+    padding-bottom: 1%;
     z-index: 12;
 }
 
@@ -53,7 +53,7 @@ a:visited {
 .lil {
     width: 50%;
     display: inline-block;
-    margin-left: 21.6%;
+    margin-left: 22.8%;
     padding-left: 2%;
     padding-top: 16px;
 
@@ -64,7 +64,7 @@ a {
     text-decoration: none;
     display: inline-block;
     padding-left: 25px;
-    font-size: 18px;
+    font-size: 17px;
     color: grey;
     font-family: "Alegreya", serif;
     width: fit-content;
@@ -76,11 +76,11 @@ a {
 }
 
 .li1 {
-    margin-left: 23%;
+    margin-left: 24%;
 }
 
 .middle {
-    margin: 68.3% auto;
+    margin: 72% auto;
     color: #ffffff;
     width: 30%;
     text-align: center;
@@ -181,11 +181,11 @@ h1 {
 }
 
 .contactinfo {
-    width: 80%;
+    width: 83%;
     margin: auto;
-    padding-top: 43px;
+    padding-top: 70px;
     padding-bottom: 2%;
-    margin-left: 10.4%;
+    margin-left: 10%;
 
     /* background-color: aquamarine; */
 }
@@ -193,31 +193,24 @@ h1 {
 .c {
     width: 23%;
     display: inline-block;
-    margin-left: 2.5%;
+    margin-left: 2%;
     height: 15%;
     vertical-align: top;
     letter-spacing: 0.1px;
     /* background-color: #969696; */
 }
 
-.c11 {
-    width: 23%;
-    display: inline-block;
+
+.c1 {
     padding-top: 0.2%;
-    height: 15%;
-    vertical-align: top;
     margin-left: 0;
 }
 
 .c44 {
-    width: 23%;
-    display: inline-block;
-    margin-left: 2%;
     padding-top: 0.2%;
-    height: 15%;
     vertical-align: top;
+    
 }
-
 .c4 {
     background-image: url(images/contact-details-map.png);
     background-size: contain;
